Fix z-index for magniview image and video containers

--- a/src/main.css
+++ b/src/main.css
@@ -139,7 +139,7 @@
     justify-content: center;
     align-items: center;
     margin: auto;
-    z-index: 2;
+    z-index: -1;
     overflow: hidden;
     -webkit-user-select: none;
     user-select: none;
